alignment fixed

--- a/pages/portfolio/Portfolio.module.css
+++ b/pages/portfolio/Portfolio.module.css
@@ -14,14 +14,10 @@
 }
 
 .title {
-  min-width: 100%;
-  width: 100%;
-  /* left: 0;
-  right: 0; */
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 40px;
+  font-size: 30px;
   margin: 24px;
   font-family: "Bellefair";
   font-weight: bold;
@@ -30,8 +26,6 @@
 .image_container {
   min-width: 100%;
   width: 100%;
-  /* left: 0;
-  right: 0; */
   display: flex;
   justify-content: center;
   align-items: center;
